[build-system]
requires = ["setuptools>45", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "awlpy_app"
authors = [
    {name = "Kent Inverarity", email = "kinverarity@hotmail.com"}
]
description = "Graphical application for viewing and analysing well logs"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pandas",
    "numpy",
    "PySide6",
    "pyqtgraph",
    "lasio"
]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Customer Service",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.6",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.2",
    "Programming Language :: Python :: 3.3",
    "Programming Language :: Python :: 3.4",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Filesystems",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["science", "geophysics"]

[project.urls]
"Homepage" = "https://github.com/kinverarity1/awlpy_app"
"Bug Tracker" = "https://github.com/kinverarity1/awlpy_app/issues"

[project.scripts]
awlpy-app = "awlpy_app.app:main"
awlpy_app = "awlpy_app.app:main"

[tool.setuptools_scm]